objects/TRIMEC__TRIM_Entry_Check_Setup__c.object
<CustomObject>
    <fields>
        <fullName>TRIMEC__Lead_CF3__c</fullName>
        <description>Support for custom search for leads using Custom key 3
Example: VRN__c like &apos;%cf3%&apos;
cf3 will be replaced with the value entered by the user in the cf3 input field, e.g. X123 so that the search becomes: VRN__c like &apos;%X123%&apos;</description>
        <inlineHelpText>Search method for Custom Search (CF3), Examples: VRN__c LIKE &apos;%cf3%&apos; or Customer_No__c = &apos;cf3&apos;</inlineHelpText>
        <label>Lead Custom Search 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Lead_Field_List__c</fullName>
        <description>List of field used when querying the Lead Object.
Default is: Id, Name, FirstName, LastName, Company, Website, Phone, Fax, MobilePhone, Email, Status, LeadSource, Owner.Name&apos;;</description>
        <inlineHelpText>List of fields to query for Leads</inlineHelpText>
        <label>Lead Field List</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Lead_Label_Singular__c</fullName>
        <description>Label Text to be displayed for Matched Records from the Lead Table.</description>
        <inlineHelpText>Label Text to be displayed for Matched Records from the Lead Table.</inlineHelpText>
        <label>Lead Label (Singular)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Lead_Label__c</fullName>
        <description>Label Text to be displayed for Matched Records from the Lead Table.</description>
        <label>Lead Label (Plural)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Lead_NoMatchKey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable/enable the use of the Match Key Field on Lead. Default: Enabled</description>
        <inlineHelpText>Disable/enable the use of the Match Key Field on Lead. Default: Enabled</inlineHelpText>
        <label>Lead No MatchKey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Lead_QScopeDynFilter__c</fullName>
        <description>Allows you to dynamically scope the search on Leads
Example: PlantType__c like &apos;%qsl%&apos;
qsl will be replaced with the value entered by the user in the qsl input field, e.g. Production so that the search becomes:  PlantType__c like &apos;%Production%&apos;
This will let Entry Check limit the search to Lead records with the Plant Type containing the word &apos;Production&apos;</description>
        <inlineHelpText>Limit the Entry Check to a subset of records. Example: RecordType.Name = &apos;lsa&apos; or PlantType__c like &apos;%lsa%&apos;</inlineHelpText>
        <label>Lead Query Scope Filter (Dynamic)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Lead_QScopeFilter__c</fullName>
        <description>Specify Leads to include in the search. e.g. RecordType.Name = &apos;Customers&apos;
Will let Entry Check only search the records with the Record Type of Customer.</description>
        <inlineHelpText>Limit the Entry Check to a subset of records. Example: RecordType.Name = &apos;Doctor&apos; or RecordType.Name != &apos;Doctor&apos; or RecordType.Name LIKE &apos;Doctor&apos;</inlineHelpText>
        <label>Lead Query Scope Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Lead_Score_Threshold__c</fullName>
        <defaultValue>95</defaultValue>
        <description>A value between 0 and 100 to indicate which records that should be displayed.
Only Matched records with a score higher than or equal to this value will be listed.</description>
        <label>Lead Score Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMEC__PersonAccount_Label_Singular__c</fullName>
        <description>Label Text to be displayed for Matched Records from the Person Accounts</description>
        <label>Person Account Label (Singular)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__PersonAccount_Label__c</fullName>
        <description>Label Text to be displayed for Matched Records from Person Accounts</description>
        <label>Person Account Label (Plural)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Query_Limit__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Limits to number of records which re returned for each check performed towards the database.
This Limit may need to be adjusted to meet salesforce&apos;s Data governor rules</description>
        <label>Query Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMEC__RecordTypeID_for_PersonAccounts__c</fullName>
        <description>Record Type ID for Person Accounts</description>
        <label>Record Type ID for Person Accounts</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__ShowLabels__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show/Hide Labels for the Input fields on the Entry Check Main Page. Default is Hide</description>
        <inlineHelpText>Show/Hide Labels for the Input fields on the Entry Check Main Page. Default is Hide</inlineHelpText>
        <label>Show Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Without_Sharing_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</description>
        <inlineHelpText>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</inlineHelpText>
        <label>Without Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Without_Sharing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</description>
        <inlineHelpText>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</inlineHelpText>
        <label>Without Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Without_Sharing_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</description>
        <inlineHelpText>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</inlineHelpText>
        <label>Without Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__Without_Sharing_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</description>
        <inlineHelpText>Will disable sharing rules for Entry Check, allowing Entry Check to search in the entire database regardless of the users permission settings</inlineHelpText>
        <label>Without Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__useRT4Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Record Types for Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__useRT4Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Record Types for Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__useRT4Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Record Types for Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__useRT4PersonAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use Record Types for Person Accounts</description>
        <label>Use Record Types for Person Accounts</label>
        <type>Checkbox</type>
    </fields>
    <label>Entry Check Setup</label>
    <nameField>
        <label>Entry Check Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entry Check Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TRIMEC__Activation_of_DAD_Need_Match_Type</fullName>
        <active>true</active>
        <description>If the Dupe Account Detector (DAD) is activated, a minimum of additional parameters must be set.</description>
        <errorConditionFormula>AND( TRIMEC__DADActive__c = true , ISBLANK(TRIMEC__DADMatchTypes__c) )</errorConditionFormula>
        <errorDisplayField>TRIMEC__DADMatchTypes__c</errorDisplayField>
        <errorMessage>When activating the Dupe Account Detector, you must select at least one Match Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRIMEC__Activation_of_DCD_Need_Match_Type</fullName>
        <active>true</active>
        <description>If the Dupe Contact Detector (DCD) is activated, a minimum of additional parameters must be set.</description>
        <errorConditionFormula>AND( TRIMEC__DCDActive__c = true , ISBLANK(TRIMEC__DCDMatchTypes__c) )</errorConditionFormula>
        <errorDisplayField>TRIMEC__DCDMatchTypes__c</errorDisplayField>
        <errorMessage>When activating the Dupe Contact Detector, you must select at least one Match Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRIMEC__Activation_of_DLD_Need_Action</fullName>
        <active>true</active>
        <description>If the dupe Lead Detector is activates, a minimum of additional parameters must be set.</description>
        <errorConditionFormula>AND( TRIMEC__DLDActive__c = true ,  ISBLANK( TRIMEC__DLDStatusSource__c ),  ISBLANK(  TRIMEC__DLDBlockSource__c  )  )</errorConditionFormula>
        <errorDisplayField>TRIMEC__DLDStatusSource__c</errorDisplayField>
        <errorMessage>When activating the Dupe Lead Detector, you must select at least one Lead Source for which the action apply.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRIMEC__Activation_of_DLD_Need_Match_Type</fullName>
        <active>true</active>
        <description>If the dupe Lead Detector is activated, a minimum of additional parameters must be set.</description>
        <errorConditionFormula>AND( TRIMEC__DLDActive__c = true ,  ISBLANK(TRIMEC__DLDMatchTypes__c) )</errorConditionFormula>
        <errorDisplayField>TRIMEC__DLDMatchTypes__c</errorDisplayField>
        <errorMessage>When activating the Dupe Lead Detector, you must select at least one Match Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRIMEC__Max_Query_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>TRIMEC__Query_Limit__c &gt; 100</errorConditionFormula>
        <errorDisplayField>TRIMEC__Query_Limit__c</errorDisplayField>
        <errorMessage>The maximum Query Limit cannot not be higher than 100 (default is 50)</errorMessage>
    </validationRules>
</CustomObject>